refine traverseGlobalResetNetwork, modify the partition rule and add functionality of searching edges